Name:                riboseq
Version:             0.0
Cabal-Version:       >= 1.14
License:             MIT
Author:              Nick Ingolia
Maintainer:          nick@ingolia.org
Build-Type:          Simple
Synopsis:            Analyze ribosome profiling data
Homepage:            http://www.ingolia-lab.org/
Category:            Bioinformatics

Source-Repository head
  type: git
  location: http://github.com/ingolia/RiboSeq

Library
  Exposed-Modules:     Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.Counting,
                       Bio.RiboSeq.BamFile, Bio.RiboSeq.Framing
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee,
                       transformers, monads-tf, vector, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  GHC-Options:         -auto-all -Wall
  Default-Language:    Haskell2010

Executable rrna-stats
  Main-is:             RrnaStats.hs
  Other-modules:       Bio.RiboSeq.RrnaStats, Bio.RiboSeq.RrnaFrags
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee,
                       transformers, monads-tf, vector, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable fp-framing
  Main-Is:             FpFraming.hs
  Other-Modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.Counting,
                       Bio.RiboSeq.BamFile, Bio.RiboSeq.Framing
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee,
                       transformers, monads-tf, vector, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -Wall
  Default-Language:    Haskell2010

Executable wiggle-track
  Main-Is:             WiggleTrack.hs
  Other-Modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector, unordered-containers,
                       seqloc >= 0.5.1, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -Wall
  Default-Language:    Haskell2010

Executable fp-transcript
  Main-is:             FpTranscript.hs
  Other-modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile, Bio.RiboSeq.Counting
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable profile-distribution
  Main-is:             ProfileDistribution.hs
  Other-modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile, Bio.RiboSeq.Counting
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector, statistics,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable bed-count
  Main-is:             BedCount.hs
  Other-modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile, Bio.RiboSeq.Counting
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable bed-feature-ldist
  Main-is:             BedFeatureLDist.hs
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable feature-bed
  Main-is:             FeatureBed.hs
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010
