Name:                riboseq
Version:             0.0.20150213
Cabal-Version:       >= 1.14
License:             MIT
Author:              Nick Ingolia
Maintainer:          nick@ingolia.org
Build-Type:          Simple
Synopsis:            Analyze ribosome profiling data
Homepage:            http://www.ingolia-lab.org/
Category:            Bioinformatics

Source-Repository head
  type: git
  location: http://github.com/ingolia/RiboSeq

Library
  Exposed-Modules:     Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.Counting,
                       Bio.RiboSeq.BamFile, Bio.RiboSeq.Framing
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee,
                       transformers, monads-tf, vector, hashable, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  GHC-Options:         -auto-all -Wall
  Default-Language:    Haskell2010

Executable bam-suppress-duplicates
  Main-is:             BamSuppressDuplicates.hs
  Build-depends:       base, bytestring, cmdtheline, 
                       monads-tf, unordered-containers, hashable, vector, conduit >= 1.2.1, resourcet,
                       seqloc >= 0.6.1.1, seqloc-datafiles, samtools >= 0.2.4.1, samtools-conduit >= 0.1.0.1
  Hs-Source-Dirs:      src

Executable bam-annotate
  Main-is:             BamAnnotate.hs
  Build-depends:       base, bytestring, cmdtheline, 
                       monads-tf, unordered-containers, vector, conduit >= 1.2.1, resourcet,
                       seqloc >= 0.6.1.1, seqloc-datafiles, samtools >= 0.2.4.1, samtools-conduit >= 0.1.0.1
  Hs-Source-Dirs:      src

Executable fastx-split
  Main-is:             FastxSplit.hs
  Other-modules:       Bio.RiboSeq.LinkerSeqs
  Build-depends:       base >= 4.2 && < 5, bytestring,
                       attoparsec >= 0.8.5, hashable, unordered-containers, directory,
                       iteratee >= 0.8.1, seqloc, biocore >= 0.2, transformers,
                       conduit, conduit-extra, vector, filepath, resourcet, cmdtheline
  Hs-Source-Dirs:      src
  Ghc-Options:         -auto-all -O2 -Wall

Executable rrna-stats
  Main-is:             RrnaStats.hs
  Other-modules:       Bio.RiboSeq.RrnaStats, Bio.RiboSeq.RrnaFrags
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee,
                       transformers, monads-tf, vector, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable fp-framing
  Main-Is:             FpFraming.hs
  Other-Modules:       Bio.RiboSeq.Framing
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, resourcet, conduit, cmdtheline,
                       transformers, monads-tf, vector, hashable, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee, samtools-conduit
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -Wall
  Default-Language:    Haskell2010

Executable wiggle-track
  Main-Is:             WiggleTrack.hs
  Other-Modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector, unordered-containers,
                       seqloc >= 0.5.1, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -Wall
  Default-Language:    Haskell2010

Executable fp-transcript
  Main-is:             FpTranscript.hs
  Other-modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile, Bio.RiboSeq.Counting,
                       Bio.RiboSeq.Translation
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector, hashable, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable profile-distribution
  Main-is:             ProfileDistribution.hs
  Other-modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile, Bio.RiboSeq.Counting,
                       Bio.RiboSeq.Translation
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector, statistics, hashable, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable bed-count
  Main-is:             BedCount.hs
  Other-modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile, Bio.RiboSeq.Counting
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector, hashable, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable bed-feature-ldist
  Main-is:             BedFeatureLDist.hs
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector, statistics,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable feature-bed
  Main-is:             FeatureBed.hs
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable quant-windows
  Main-Is:             QuantWindows.hs
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector, unordered-containers,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable fp-count
  Main-Is:             FpCount.hs
  Other-modules:       
  Build-depends:       base, bytestring, attoparsec >= 0.8.5, iteratee, filepath,
                       transformers, monads-tf, vector, unordered-containers, statistics,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010

Executable train-harr-start
  Main-Is:             TrainHarrStart.hs
  Other-modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile, Bio.RiboSeq.Counting,
                       Bio.RiboSeq.Translation, Bio.RiboSeq.SVMLight, Bio.RiboSeq.StartSVM
  Build-depends:       base, bytestring, containers, attoparsec >= 0.8.5, filepath, process, unix, directory,
                       transformers, monads-tf, vector, iteratee, conduit, MonadCatchIO-transformers, cmdtheline,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee, hashable, unordered-containers
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010  

Executable test-harr-start
  Main-Is:             TestHarrStart.hs
  Other-modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile, Bio.RiboSeq.Counting,
                       Bio.RiboSeq.Translation, Bio.RiboSeq.SVMLight, Bio.RiboSeq.StartSVM
  Build-depends:       base, bytestring, containers, attoparsec >= 0.8.5, filepath, process, unix, directory,
                       transformers, monads-tf, vector, iteratee, conduit, MonadCatchIO-transformers, cmdtheline,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee, hashable, unordered-containers
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010  

Executable test-ltm-start
  Main-Is:             TestLtmStart.hs
  Other-modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile, Bio.RiboSeq.Counting,
                       Bio.RiboSeq.Translation, Bio.RiboSeq.SVMLight, Bio.RiboSeq.StartSVM,
                       Bio.RiboSeq.StartLTM
  Build-depends:       base, bytestring, containers, attoparsec >= 0.8.5, filepath, process, unix, directory,
                       transformers, monads-tf, vector, iteratee, conduit, MonadCatchIO-transformers, cmdtheline,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee, hashable, unordered-containers
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010  

Executable start-sites
  Main-Is:             StartSites.hs
  Other-modules:       Bio.RiboSeq.CodonAssignment, Bio.RiboSeq.BamFile, Bio.RiboSeq.Counting,
                       Bio.RiboSeq.Translation, Bio.RiboSeq.SVMLight, Bio.RiboSeq.StartSVM,
                       Bio.RiboSeq.StartLTM
  Build-depends:       base, bytestring, containers, attoparsec >= 0.8.5, filepath, process, unix, directory,
                       transformers, monads-tf, vector, iteratee, conduit, MonadCatchIO-transformers, cmdtheline,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee, hashable, unordered-containers
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010  

Executable pars-stats
  Main-Is:             ParsStats.hs
  Other-modules:       Bio.RiboSeq.Pars
  Build-depends:       base, bytestring, containers, attoparsec >= 0.8.5, filepath, process, unix, directory,
                       transformers, monads-tf, vector, conduit, MonadCatchIO-transformers, cmdtheline, lens,
                       unordered-containers, seqloc, conduit-extra, resourcet
  Hs-Source-Dirs:      src
  Ghc-options:         -auto-all -O2 -Wall
  Default-Language:    Haskell2010  
  
Executable yassour-uorf
  Main-Is:             YassourUorf.hs
  Other-modules:       Bio.RiboSeq.CodonAssignment
  Build-depends:       base, bytestring, filepath, process, unix, directory, attoparsec >= 0.8.5, iteratee,
                       transformers, monads-tf, vector,
                       seqloc, seqloc-datafiles, samtools >= 0.1.2, samtools-iteratee
  Hs-Source-Dirs:      src
  Ghc-options:          -auto-all -O2 -Wall

Executable quant-table
  Main-is:             QuantTable.hs
  Other-modules:       Bio.RiboSeq.QExpr
  Build-depends:       base, bytestring, attoparsec, transformers,
                       monads-tf, containers >= 0.4.0.0, filepath, statistics, vector
  Hs-Source-Dirs:      src
  Ghc-Options:         -auto-all -O2 -Wall

Executable subset-mw
  Main-is:             SubsetMannWhitney.hs
  Build-depends:       base, bytestring, attoparsec, cmdtheline, statistics,
                       monads-tf, unordered-containers, vector
  Hs-Source-Dirs:      src

